# swerve_mobile_robot

./: .gitignore  README.md  chat_context.txt  commands.txt  currentPrompt.txt  export_context.py
swerve_bringup/: CMakeLists.txt  package.xml
swerve_bringup/config/: bridge.yaml
swerve_bringup/launch/: sim_bringup.launch.py
swerve_control/: CMakeLists.txt  package.xml
swerve_control/config/: swerve_controllers.yaml
swerve_control/src/: swerve_kinematics.cpp
swerve_description/: CMakeLists.txt  package.xml
swerve_description/urdf/: swerve_module.xacro  swerve_robot.urdf.xacro
swerve_exploration/: CMakeLists.txt  package.xml
swerve_exploration/src/: rrt_exploration.cpp
swerve_gazebo/: CMakeLists.txt  package.xml
swerve_gazebo/worlds/: json_to_sdf.py  maze.sdf  maze_2m.sdf  wall_coordinates.json  wall_coordinates_2m.json  wall_coordinates_3m.json
swerve_gui/: package.xml  setup.cfg  setup.py
swerve_gui/swerve_gui/: gui_node.py
swerve_navigation/: CMakeLists.txt  package.xml
swerve_navigation/config/: ekf.yaml  nav2_params copy.yaml  nav2_params.yaml  slam_toolbox.yaml
swerve_navigation/launch/: navigation.launch.py  slam.launch.py
swerve_navigation/map_RRT_generated/: maze_map.pgm
swerve_navigation/map_RRT_generated1/: maze_map.pgm  maze_map.yaml
swerve_navigation/maps/: maze_map.pgm  maze_map.yaml
swerve_navigation/maps2/: maze_map.pgm  maze_map.yaml
swerve_navigation/maps_3m/: maze_map.pgm  maze_map.yaml
