<?xml version="1.0"?>
<!-- File: ~/ros2_ws/src/swerve_robot/swerve_navigation/package.xml -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swerve_navigation</name>
  <version>0.0.0</version>
  <description>Navigation stack and SLAM configuration for the swerve robot</description>
  <maintainer email="luis_glez2626@outlook.com">lags</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>